// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Month /> snapshots renders component with props 1`] = `
<div
  className="mfui-month"
>
  <div
    className="mfui-month__header"
  >
    <test-file-stub
      className="mfui-month__arrow"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    />
    <span
      className="mfui-month__title"
    >
      monthLabel 1994
    </span>
    <test-file-stub
      className="mfui-month__arrow"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    />
  </div>
  <div
    className="mfui-month__weekday-labels"
  >
    <div
      className="mfui-month__weekday"
      key="label10"
    >
      label1
    </div>
    <div
      className="mfui-month__weekday"
      key="label21"
    >
      label2
    </div>
  </div>
  <div
    className="mfui-month__days"
  >
    <div />
  </div>
</div>
`;

exports[`<Month /> snapshots renders component with props disabled arrows 1`] = `
<div
  className="mfui-month"
>
  <div
    className="mfui-month__header"
  >
    <test-file-stub
      className="mfui-month__arrow mfui-month__arrow_disabled"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={-1}
    />
    <span
      className="mfui-month__title"
    >
      monthLabel 1994
    </span>
    <test-file-stub
      className="mfui-month__arrow mfui-month__arrow_disabled"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={-1}
    />
  </div>
  <div
    className="mfui-month__weekday-labels"
  >
    <div
      className="mfui-month__weekday"
      key="label10"
    >
      label1
    </div>
    <div
      className="mfui-month__weekday"
      key="label21"
    >
      label2
    </div>
  </div>
  <div
    className="mfui-month__days"
  >
    <div />
  </div>
</div>
`;
